infra/test/infrastructure/ingress/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  namespace: test
spec:
  rules:
  - host: catalog-test.mathiaspuyfages.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 80
