infra/test/infrastructure/ingress/load-test-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-test-api-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: load-test-api-do.mathiaspuyfages.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: load-test-api
            port:
              number: 8080
